reverted prompt changes